add script and cleaned data

--- a/Data/MovMat_entities.ipynb
+++ b/Data/MovMat_entities.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6116d1da",
+   "id": "023c937a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a38ca970",
+   "id": "750effcd",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "976078b4",
+   "id": "1166f41b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "07e3e989",
+   "id": "2fd8848b",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "56878d11",
+   "id": "b85aaac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7bb567dc",
+   "id": "20c85960",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "100473fc",
+   "id": "587252e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3131f777",
+   "id": "41360670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,8 +682,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "4a712c64",
+   "execution_count": 88,
+   "id": "5c827403",
    "metadata": {},
    "outputs": [
     {
@@ -916,20 +916,20 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.pd.s\n",
+    "df.to_csv('movmat_entities.csv', index=False)\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d4670b98",
+   "id": "7920d483",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "27baa7ce",
+   "id": "19a716ae",
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1fd6c61",
+   "id": "20f7e33f",
    "metadata": {},
    "outputs": [],
    "source": []
